[package]
name = "icy_term"
version = "0.7.99"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "A terminal program supporting CP437, PetScii and ViewData"
repository = "https://github.com/mkrueger/icy_tools"

[dependencies]
icy_net = { git ="https://github.com/mkrueger/icy_board" }
#icy_net = { path ="../../../icy_board/crates/icy_net" }

iced = { workspace = true, features = [ "tokio", "svg", "image", "wgpu" ]  }
# iced_aw = { workspace = true, features = ["menu"]  }

image = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
versions = "7.0.0"
regex = { workspace = true }
github_release_check = "0.2.1"
semver = { workspace = true }
webbrowser = { workspace = true }
iced_engine_gui = { workspace = true }
fastrand = { workspace = true }
clap = { workspace = true }
rmcp = { workspace = true }
jsonrpc-core = { workspace = true }
serde_json = { workspace = true }
base64 = "0.22.1"
#sound
rodio = { workspace = true }
icy_engine = { workspace = true }
icy_parser_core = { workspace = true }

walkdir = { workspace = true }
toml = { workspace = true }

lazy_static = { workspace = true }
notify = "8.2.0"
human_bytes = { version = "0.4", default-features = false }
clipboard-rs = { workspace = true }

chrono = { workspace = true }  # Utc hanldung
thiserror = { workspace = true }
anyhow = { workspace = true }

i18n-embed = { workspace = true }
i18n-embed-fl = { workspace = true }
rust-embed = { workspace = true }
once_cell = { workspace = true }

log = { workspace = true }
log4rs = "1.4.0"
web-time = "1.1.0"

# WebSocket support
tungstenite = { version = "0.28.0", features = [
    "rustls-tls-webpki-roots", # webpki root CAs
    "__rustls-tls",            # use Rustls
]}

http = "1.3.1"
url = "2.5.7"
rustls = { version = "0.23.32", features = [
    "tls12",
 #   "dangerous_configuration"  # Allow invalid certs/etc.
]}
webpki-roots = "1.0.3"
getrandom =  { version = "0.3.3" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
directories = { workspace = true }
open = "5.3.2"
rfd = "0.15.4"

tracing-subscriber = "0.3"
async-recursion = "1.1.1"
# web:
warp = { version = "0.4.2", features = ["server"]}
bytes = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
wasm_thread = { version = "0.2.0", features = ["es_modules"]}

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
winres = "0.1"

[package.metadata.bundle]
name = "Icy Term"
identifier = "com.github.icy_term"
icon = [ "build/mac/128x128@2x.png" ]
resources = []
copyright = "Copyright (c) Mike Krüger 2022. All rights reserved."

[package.metadata.deb]
section="Network"
copyright = "Copyright (c) Mike Krüger 2022. All rights reserved."
revision=""
depends = "libasound2"
assets = [
    ["target/release/icy_term", "/usr/bin/", "755"],
    ["build/linux/icy_term.desktop", "/usr/share/applications/", "644"],
    ["build/linux/128x128.png", "/usr/share/icons/hicolor/128x128/apps/icy_term.png", "644"],
    ["build/linux/256x256.png", "/usr/share/icons/hicolor/256x256/apps/icy_term.png", "644"],
]


[patch.crates-io]
iced.git = "https://github.com/iced-rs/iced.git"