[package]
name = "icy_term"
version = "0.7.99"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "A terminal program supporting CP437, PetScii and ViewData"
repository = "https://github.com/mkrueger/icy_tools"

[dependencies]
icy_net = { workspace = true }
icy_engine = { workspace = true }
icy_engine_scripting = { workspace = true }
icy_parser_core = { workspace = true }
mlua = { workspace = true }
iced = { workspace = true, features = [ "tokio", "svg", "image", "wgpu" ]  }

# iced_aw = { workspace = true, features = ["menu"]  }
clap-i18n-richformatter = "0.1.4"
image = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
versions = { workspace = true }
regex = { workspace = true }
github_release_check = { workspace = true }
semver = { workspace = true }
webbrowser = { workspace = true }
icy_engine_gui = { workspace = true }
fastrand = { workspace = true }
clap = { workspace = true }
jsonrpc-core = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }

#sound
rodio = { workspace = true }

walkdir = { workspace = true }
toml = { workspace = true }

lazy_static = { workspace = true }
notify = { workspace = true }
human_bytes = { version = "0.4", default-features = false }
clipboard-rs = { workspace = true }

chrono = { workspace = true }  # Utc hanldung
thiserror = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }

i18n-embed = { workspace = true }
i18n-embed-fl = { workspace = true }
rust-embed = { workspace = true }
once_cell = { workspace = true }
url = "2.5.7"

log = { workspace = true }
log4rs = "1.4.0"

directories = { workspace = true }
open = { workspace = true }
rfd = { workspace = true }

async-recursion = "1.1.1"


# MCP
rmcp = { workspace = true }
warp = { version = "0.4.2", features = ["server"]}
bytes = "1.10.1"

[build-dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
winres = "0.1"

[package.metadata.bundle]
name = "Icy Term"
identifier = "com.github.icy_term"
icon = [ "build/mac/128x128@2x.png" ]
resources = []
copyright = "Copyright (c) Mike Krüger 2022. All rights reserved."

[package.metadata.deb]
section="Network"
copyright = "Copyright (c) Mike Krüger 2022. All rights reserved."
revision=""
depends = "libasound2"
assets = [
    ["target/release/icy_term", "/usr/bin/", "755"],
    ["build/linux/icy_term.desktop", "/usr/share/applications/", "644"],
    ["build/linux/128x128.png", "/usr/share/icons/hicolor/128x128/apps/icy_term.png", "644"],
    ["build/linux/256x256.png", "/usr/share/icons/hicolor/256x256/apps/icy_term.png", "644"],
]

[patch.crates-io]
iced.git = "https://github.com/iced-rs/iced.git"