[package]
name = "icy_view_gui"
version = "0.8.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { workspace = true }
egui_extras = { workspace = true }
egui_glow = { workspace = true }
glow = { workspace = true }
memmap = "0.7.0"
zip = { workspace = true }
directories = { workspace = true }
lazy_static = { workspace = true }

log = { workspace = true }
env_logger = "0.11"
i18n-embed = { workspace = true }
i18n-embed-fl = { workspace = true }
once_cell = { workspace = true }
rust-embed = { workspace = true }
egui-modal = { workspace = true }
egui-notify = { workspace = true }
thiserror = { workspace = true }
anyhow = "1.0.75"
serde = { workspace = true }
toml = { workspace = true }
semver = { workspace = true }

image = { version = "0.25.1", features = ["jpeg", "png", "gif", "bmp"] }

icy_sauce = { workspace = true }
icy_engine = { workspace = true }
icy_engine_gui = { workspace = true }
rodio = { workspace = true }
getrandom =  { version = "0.2.15", features = ["js"] }
web-time = "1.1.0"
reqwest = { version= "0.12.12", features = ["json", "blocking"] }
serde_json = "1.0"