[package]
name = "icy_view_gui"
version = "0.9.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
icy_engine = { workspace = true }
icy_engine_gui = { workspace = true }
icy_sauce = { workspace = true }
icy_parser_core = { workspace = true }
icy_net = { workspace = true }
unarc-rs = { workspace = true }

iced = { workspace = true, features = ["tokio", "svg", "image", "wgpu"] }
image = { workspace = true }
directories = { workspace = true }
lazy_static = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "time", "sync", "fs"] }
tokio-util = "0.7"
async-trait = "0.1"
bytemuck = { version = "1.0", features = ["derive"] }
retrofont = { workspace = true }
rfd = { workspace = true }
clipboard-rs = { workspace = true }
string-interner = { workspace = true }

# SVG and font rendering for shader-based list
resvg = { workspace = true }
ab_glyph = { workspace = true }

log = { workspace = true }
i18n-embed = { workspace = true }
i18n-embed-fl = { workspace = true }
once_cell = { workspace = true }
rust-embed = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
semver = { workspace = true }
open = { workspace = true }
fastrand = { workspace = true }

reqwest = { version = "0.12.12", features = ["json"] }
serde_json = { workspace = true }

[patch.crates-io]
iced.git = "https://github.com/iced-rs/iced.git"